css/style.css
/* ... */
.typeface-roboto-font-size-header2 {
  font-weight: 300;
}

.typeface-roboto-typoheader {
  text-align: left;
  font-family: 'roboto';
  font-size: 1em;
  font-weight: 300;
  margin-bottom: 10px;
}

.typeface-roboto-paragraph {
  text-align: justify;
  font-family: 'Roboto';
  font-size: 1em;
  font-weight: 100;
  margin-bottom: 10px;
}

.biohero-container {
  background-image: url('../images/Diana-Photo.jpg');
  width: auto;
  margin-top: 3.3em;
  height: 28em;
  background-size: cover;
  background-repeat: no-repeat;
  margin-bottom: 1em;
}

.hivelogo {
  color: #000000;
  font-family: 'Italiana';
  font-size: 3.5em;
  font-weight: 300;
  text-align: center;
}

.hivelogohomepage {
  text-align: center;
  position: absolute;
  padding-top: 1em;
  margin-left: 6.5em;
}

.yellow-hive-homepage {
  background-image: url('../images/Hive-Debut.png');
  width: auto;
  margin-top: 2.5em;
  height: 600px;
  background-size: cover;
  background-repeat: no-repeat;
  margin-bottom: .5em;
}

.hero {
  color: #7D5050;
  font-family: 'Yanone Kaffeesatz';
  font-size: 2.8em;
  font-weight: 100;
  text-align: center;
  float: right;
}

.UXArch {
  font-family: 'Yanone Kaffeesatz';
  font-size: 1.2em;
  color: #303030;
  font-weight: 100;
}

.hive-mobile {
  padding-left: 2em;
  padding-right: 2em;
  padding-top: 1em;
  padding-bottom: 1em;
}

.wfl {
width: 100%;
  height: auto;
}


hr {
  margin-top: 50px;
  margin-bottom: 50px
  border: .2px gray;
}

.wfl2 {
  width: 80%;
  height: auto;
  text-align: center;
}

.wfl3 {
  width: 70%;
  height: auto;
}

.wfl4 {
  width: 100%;
  height: auto;
  padding-top: 3em;
}

.wfl5 {
  width: 45%;
  height: auto;
}

.centered {
  text-align: center;

}

#homepage-title {
  color: #303030;
  font-family: 'Yanone Kaffeesatz';
  font-size: 1.4em;
  font-weight: 100;
  text-align: center;
  float: left;
  position: absolute;
}

.homepage-title-Diana-Logo {
  color: #303030;
  font-family: 'Yanone Kaffeesatz';
  font-size: 1.4em;
  font-weight: 100;
  text-align: center;
  float: left;
}

.name {
  color: #19675D;
  font-family: 'Yanone Kaffeesatz';
  font-size: 3em;
  font-weight: 100;
  text-align: center;
  padding-top: .5em;
  padding-bottom: .3em;
}

#biohero {
  color: #7D5050;
  width: 420px;
  font-family: 'Yanone Kaffeesatz';
  font-size: 2em;
  font-weight: 100;
  float: left;
  margin-left: 1.5em;
  text-align: center;
  padding-top: 1.5em;
  display: inline-block;
}

.hive-cloud {
  text-align: center;
  line-height: .1em;
}

.hive-image {
  width: 9em;
  padding-left:0.5em;
}

h2 {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: 2.15em;
  text-align: left;
  font-weight: 100;
  line-height: 1.3em
}

#h2homepageUXWORK {
  color: #303030;
  font-family: 'Roboto';
  font-size: 1.35em;
  font-weight: 100;
  text-align: center;
}

#h2homepageDIGHER {
  color: #303030;
  font-family: 'Roboto';
  font-size: 1.35em;
  font-weight: 100;
  text-align: center;
}

#h2homepageTECHCUL {
  color: #303030;
  font-family: 'Roboto';
  font-size: 1.35em;
  font-weight: 100;
  text-align: center;
}


.cloud {
  text-align: center;
}

.cloudtext {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: 1.3em;
  font-weight: 100;
  text-align: center;
  line-height: .5em;
}

.cloudproject {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: 1.5em;
  font-weight: 100;
  line-height: .2em;
  text-align: center;
}

.newprojects {
  color: #303030;
  font-family: 'Yanone Kaffeesatz';
  font-size: 3em;
  width: 60%;
  font-weight: 50;
  text-align: center;
  line-height: 1em;
  margin: 0 auto;
  padding-top: 3.5em;
  padding-bottom: 2em;
}

#contact {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: 1em;
  font-weight: 100;
  margin-top: 10px;
  padding-top: .5em;
  margin-bottom: 10px;
  text-align: center;
}

.titlebiopage {
  color: #303030;
  font-family: 'Yanone Kaffeesatz';
  font-size: 1.6em;
  font-weight: 100;
  text-align: center;
  padding: .5em;
}

.homepagelogocontainer {
  background-image: url('../images/Grey-Sand-Bumps.png');
  margin-top: 60px;
  height: 600px;
  background-size: cover;
  background-repeat: no-repeat;
}

#logo-text-homepage {
  padding-top: 4em;
  vertical-align:top;
  display:inline-block;
}

.hivecasestudyh3 {
  color: #DD7F7F;
  font-family: 'Roboto';
  font-size: 1.2em;
  font-weight: 300;
  text-align: center;
  text-decoration: none;
}

h3 {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: 28px;
  font-weight: 100;
}

h5 {
  color: #DD7F7F;
  font-family: 'Roboto', sans-serif;
  font-size: 22px;
  line-height: 1.6em;
  font-weight: 300;
}

.title {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: .8em;
  font-weight: 300;
  text-align: center;
  line-height: 1.2em;
}

.details {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: .8em;
  font-weight: 300;
  text-align: left;
  line-height: 1.6em;
}

p {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: 1em;
  font-weight: 300;
  text-align: justify;
  line-height: 1.4em;
}

.roles {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: 1em;
  font-weight: 100;
  text-align: center;
}

.biohighlights {
  color: #7D5050;
  font-family: 'Roboto', sans-serif;
  font-size: 1.2em;
  font-weight: 300;
  text-align: left;
}

ul {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: .8em;
  font-weight: 500;
  text-align: left;
}

ol {
  color: #303030;
  font-family: 'Roboto', sans-serif;
  font-size: .8em;
  font-weight: 500;
  text-align: left;
}

.yellow {
  color: #DAB73C;
  font-family: 'Roboto', sans-serif;
  font-size: 1em;
  font-weight: 300;
}

.grey {
  color: #6E6868;
  font-family: 'Roboto', sans-serif;
  font-size: 1em;
  font-weight: 300;
}

.pink {
  color: #DD7F7F;
  font-family: 'Roboto', sans-serif;
  font-size: 1em;
  font-weight: 300;
}
/* ... */

